<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/main_bg_color"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="?attr/main_color" />

    <LinearLayout
        android:id="@+id/ll_item"
        style="@style/DetailStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="vertical">

        <LinearLayout
            style="@style/ItemParentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TvTextStyle"
                android:layout_width="@dimen/dp_text_four_width"
                android:layout_height="wrap_content"
                android:text="@string/goods_no" />

            <TextView
                android:id="@+id/tv_goods_no"
                style="@style/TvTextSerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            style="@style/ItemParentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TvTextStyle"
                android:layout_width="@dimen/dp_text_four_width"
                android:layout_height="wrap_content"
                android:text="@string/goods_name" />

            <TextView
                android:id="@+id/tv_goods_name"
                style="@style/TvTextSerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            style="@style/ItemParentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TvTextStyle"
                android:layout_width="@dimen/dp_text_four_width"
                android:layout_height="wrap_content"
                android:text="@string/scan_qty" />

            <TextView
                android:id="@+id/tv_scan_qty"
                style="@style/TvTextSerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_scan_unit"
                style="@style/TvTextSerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_unit_margin"
                android:layout_weight="1" />

            <TextView
                style="@style/TvTextStyle"
                android:layout_width="@dimen/dp_text_three_width"
                android:layout_height="wrap_content"
                android:text="@string/auxiliary_unit" />

            <TextView
                android:id="@+id/tv_auxiliary_qty"
                style="@style/TvTextSerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_auxiliary_unit"
                style="@style/TvTextSerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_unit_margin"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_detail"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_item"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_6" />

    <RelativeLayout
        android:id="@+id/rl_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/white_bg"
        android:padding="@dimen/dp_5"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/cb_choose_all"
            style="@style/check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_all" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="@dimen/dp_button_width"
            android:layout_height="@dimen/dp_button_height"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_main_bg"
            android:text="@string/delete" />
    </RelativeLayout>
</RelativeLayout>